--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~7.0.0-rc.0",
     "@angular/platform-browser-dynamic": "~7.0.0-rc.0",
     "@angular/router": "~7.0.0-rc.0",
+    "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "moment": "^2.22.2",
     "rxjs": "~6.3.3",
